# rust-ipa

./: .env  .gitignore  Cargo.toml  README.md
api/: Cargo.toml
api/src/: api.rs  error.rs  lib.rs  limit.rs  response.rs  span.rs  state.rs  token.rs
api/src/base/: config.rs  error.rs  limit.rs  mod.rs  response.rs  state.rs  token.rs
api/src/view/: app.rs  base.rs  mod.rs  pay.rs  pay_record.rs  user.rs
api/src/view/admin/: app.rs  mod.rs
api/src/view/admin/app/: cfg.rs  dump_change_status.rs  mod.rs
api/src/view/admin/dump/: cfg.rs  change_status.rs  mod.rs
api/src/view/app/: add.rs  app_configure.rs  cfg.rs  classify.rs  create.rs  dump.rs  hots.rs  latest_version.rs  list.rs  lists.rs  mod.rs  news.rs  search.rs  version.rs  versions.rs
api/src/view/dump/: add.rs  cfg.rs  mod.rs
api/src/view/pay/: cfg.rs  menu.rs  mod.rs  notify.rs  order.rs  pay_configure.rs
api/src/view/pay_record/: balance.rs  cfg.rs  mod.rs  records.rs  transfer.rs
api/src/view/user/: cfg.rs  detail.rs  login.rs  mod.rs
entity/: Cargo.toml
entity/src/: app.rs  app_version.rs  dump.rs  lib.rs  pay.rs  pay_menu.rs  pay_record.rs  prepare.rs  user.rs  user_dump.rs
migration/: Cargo.toml  README.md  copy.js  package.json
migration/src/: create_app_table.rs  create_app_version_table.rs  create_dump_table.rs  create_pay_menu_table.rs  create_pay_record_table.rs  create_pay_table.rs  create_user_dump_table.rs  create_user_table.rs  lib.rs
service/: Cargo.toml
service/src/: app.rs  app_version.rs  dump.rs  lib.rs  pay.rs  pay_menu.rs  pay_record.rs  user.rs  user_dump.rs
service/src/admin/: dump.rs
service/src/admin/dump/: mod.rs  update_status.rs
service/src/app/: add.rs  create.rs  find_by_appid.rs  list.rs  mod.rs  query_by_appids.rs  query_by_name.rs  query_by_page.rs  query_hots.rs  search_by_appid.rs  search_by_appids.rs  search_by_name.rs
service/src/app_version/: find_by_appid_and_version.rs  find_latest_version_by_appid.rs  latest_version_by_appid.rs  mod.rs  query_by_appid.rs  query_by_appids.rs  search_by_appid.rs  search_by_appid_and_version.rs
service/src/dump/: add.rs  create.rs  find.rs  find_by_appid.rs  find_latest_version_by_appid.rs  mod.rs  query_news.rs  search_by_appid.rs  search_info.rs  search_latest_version_by_appid.rs
service/src/pay/: add.rs  create.rs  mod.rs  payed.rs  update_payed_status.rs
service/src/pay_menu/: add.rs  create.rs  find.rs  find_by_id.rs  list.rs  mod.rs  query_by_page.rs
service/src/pay_record/: coin_change.rs  coin_sum.rs  find_coin_balance.rs  list.rs  mod.rs  query_by_user_and_page.rs  transfer.rs  update_coin.rs  update_transfer.rs
service/src/user/: add.rs  create.rs  find_by_email.rs  find_by_id.rs  find_by_username.rs  list.rs  mod.rs  query_by_page.rs
service/src/user_dump/: add.rs  create.rs  find_by_user.rs  find_by_user_today.rs  find_today_by_user.rs  mod.rs  search_by_user.rs  search_by_user_today.rs
service/tests/: mock.rs  prepare.rs
util/: Cargo.toml
util/src/: file.rs  lib.rs  sql.rs  time.rs  uuid.rs
