[package]
name = "api"
version = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = { path = "../entity" }
service = { path = "../service" }
migration = { path = "../migration" }
util = { path = "../util" }

wechat-pay-rust-sdk = { workspace = true }
actix-web = { workspace = true }
tokio = { workspace = true }
actix-governor = { workspace = true }
dotenvy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-actix-web = { workspace = true }
tracing-appender = { workspace = true }
listenfd = { workspace = true }
cached = { workspace = true }
jsonwebtoken = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
md5 = { workspace = true }