[package]
name = "service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
entity = { path = "../entity" }
sea-orm = { version = "0.12.10", features = ["sqlx-postgres", "runtime-async-std-native-tls", "debug-print"] }
tracing = "0.1.40"
[dev-dependencies]
tokio = { version = "1.35.1", features = ["macros", "rt"] }
[features]
mock = ["sea-orm/mock"]
[[test]]
name = "mock"
required-features = ["mock"]
